updated meeting notes

--- a/source/Spatch/public/template.html
+++ b/source/Spatch/public/template.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+<meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Title</title>
+    <title>Title</title>
 
     <!-- Favicon -->
     <link rel='icon' type='image/png' href='/favicon.png'>
@@ -15,13 +15,15 @@
     <!-- https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
 
     <!-- Our Personal CSS Files -->
-	<link rel='stylesheet' href='../styles/template.css'>
+    <link rel='stylesheet' href='../styles/template.css'>
 
     <!-- Our Personal JS Files -->
-	<!-- <script src='/scripts/YOUR-SCRIPT-HERE'></script> -->
+    <!-- <script src='/scripts/YOUR-SCRIPT-HERE'></script> -->
 </head>
 
 <body>
     <!-- Content goes here -->
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button>Button</button>
 </body>
 </html>
