--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -15,23 +15,50 @@
     <!-- https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
 
     <!-- Our Personal CSS Files -->
-    <link rel='stylesheet' href='../styles/template.css'>
+    <link rel='stylesheet' href='../styles/home.css'>
+    <link rel='stylesheet' href='../styles/nav.css'>
 
     <!-- Our Personal JS Files -->
     <!-- <script src='/scripts/YOUR-SCRIPT-HERE'></script> -->
 </head>
 
 <body>
-    <!-- Content goes here -->
-    <h1>Welcome</h1>
-    <!-- Template Recipe Display -->
-    <div class="recipe-row">
-        <h2>My Recipes</h2>
-        <div class="row">
-            <div class="col recipe-display">
-                <!-- Lab 6 using JS -->
+    <div class="main-content">
+        <div id="nav-placeholder">
+            <div class="here">
+                <p>text</p>
             </div>
         </div>
+        <div class="home-content">
+            <!-- Content goes here -->
+            <h1>Welcome</h1>
+            <div class="recipe-row">
+                <h3>My Recipes</h3>
+                <div class="row">
+                    <div class="col recipe-display">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="col-10 text-left home-content">
+            <h1>Welcome</h1>
+            <div class="recipe-row">
+                <h3>My Recipes</h3>
+                <div class="row">
+                    <div class="col recipe-display">
+                        
+                    </div>
+                </div>
+            </div>
+        </div> -->
     </div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $(function(){
+            $("#nav-placeholder").load("nav.html");
+        });
+    </script>
+    <script src="../scripts/nav.js"></script>
 </body>
 </html>
