nav fixes so far, need to figure out main content

--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -25,23 +25,11 @@
 <body>
     <div class="main-content">
         <div id="nav-placeholder">
-            <div class="here">
-                <p>text</p>
-            </div>
+            <!-- <div class="here">
+                <h1>text</h1>
+            </div> -->
         </div>
-        <div class="home-content">
-            <!-- Content goes here -->
-            <h1>Welcome</h1>
-            <div class="recipe-row">
-                <h3>My Recipes</h3>
-                <div class="row">
-                    <div class="col recipe-display">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- <div class="col-10 text-left home-content">
+        <!-- <div class="home-content">
             <h1>Welcome</h1>
             <div class="recipe-row">
                 <h3>My Recipes</h3>
@@ -57,6 +45,7 @@
     <script>
         $(function(){
             $("#nav-placeholder").load("nav.html");
+            // $("#nav-placeholder").before("nav.html");
         });
     </script>
     <script src="../scripts/nav.js"></script>
