--- a/source/Spatch/public/nav.html
+++ b/source/Spatch/public/nav.html
@@ -20,7 +20,7 @@
                 <img src="frontEnd1-assets/Spatch-logo-placeholder.png" id="logo-icon" alt="Logo">
                 <!-- <div class="logo-name">Spatch</div> -->
             </div>
-            <img src="frontEnd1-assets/Nav-Icons/menu.svg" id="menu-btn" alt="Menu icon">
+            <a href="#"><img src="frontEnd1-assets/Nav-Icons/menu.svg" id="menu-btn" alt="Menu icon"></a>
         </div>
         <!-- Other nav icons -->
         <ul class="nav-list">
