fixed most nav issues

--- a/source/Spatch/public/nav.html
+++ b/source/Spatch/public/nav.html
@@ -11,14 +11,14 @@
     <!-- Other nav icons -->
     <ul class="nav-list">
         <li class="nav-item">
-            <a href="#">
+            <a href="home.html">
                 <img src="frontEnd1-assets/Nav-Icons/home.svg" class="nav-icons" alt="Home icon">
                 <span class="links-name">Home</span>
             </a>
             <span class="tooltip">Home</span>
         </li>
         <li class="nav-item">
-            <a href="#">
+            <a href="searchPage.html">
                 <img src="frontEnd1-assets/Nav-Icons/search.svg" class="nav-icons" alt="Search icon">
                 <span class="links-name">Search</span>
             </a>
