Search Bar and working toggle for displaying filter options

--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -15,15 +15,69 @@
     <!-- https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
 
     <!-- Our Personal CSS Files -->
-    <link rel='stylesheet' href='../styles/template.css'>
+    <link rel='stylesheet' href='../styles/searchPage.css'>
 
     <!-- Our Personal JS Files -->
-    <!-- <script src='/scripts/YOUR-SCRIPT-HERE'></script> -->
+    <script src='../scripts/search.js'></script>
 </head>
 
 <body>
-    <!-- Content goes here -->
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button>Button</button>
+
+    <div class="SearchTitle">
+        <!-- <h1>Search for the Right Recipe</h1> -->
+    </div>
+
+    <!-- SearchBar and Button that displays filter options -->
+
+    <div class="SearchBar">
+        <input class="filterOption" type="search" id="inputBox" placeholder="Search"/>
+        <button id="filterButton" class="squareButton" onclick="toggleFilter()"></button>
+    </div>
+
+  
+    <!-- Filter Display -->
+    <div class="popUp" id="showpop">
+
+        <!-- cuisine filter -->
+        <p>Cuisine</p>
+        <div class = "filter-section">
+            <input class = "filterOption" id = "cuisine"></input>
+            <button class="squareButton" type="button" id="cuisineButton"></button>
+        </div>
+
+        <!-- Ingredients filter -->
+        <p>Ingredients</p>
+        <div class = "filter-section">
+            <input class = "filterOption" id = "ingredients"></input>
+            <button class="squareButton" type="button" id="ingredientsButton"></button>
+        </div>
+
+        <!-- Diet Filter -->
+        <p>Diet</p>
+        <div class = "filter-section">
+            <input class = "filterOption" id = "diet"></input>
+            <button class="squareButton" type="button" id="dietButton"></button>
+        </div>
+
+        <!-- Cook Time -->
+        <p>Total Cook Time</p>
+        <div class = "filter-section">
+            <input class = "filterSlider" id = "cookTime" type="range"></input>
+        </div>
+        
+        <!-- Is the meals cheap -->
+        <div class = "checkBoxSection">
+            <div class = "filterCheckbox">
+                <input id = "cheap" type="checkBox"></input>
+                <p id="cheapText">Cheap</p>
+            </div>
+            <button  type="button" id="submitFilter">Submit</button>
+        </div>
+    </div>
+
+    <!-- Recipe Results -->
+    <div>
+
+    </div>
 </body>
 </html>
