added creat new recipe button

--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -24,7 +24,14 @@
     <div class="container">
         <div id="nav-placeholder"></div>
         <div class="main-content">
-            <h1>Welcome, user!</h1>
+            <div class="row home-top">
+                <div class="col">
+                    <h1>Welcome, user!</h1>
+                </div>
+                <div class="col create-new-recipe-top">
+                    <button type="button" class="btn btn-primary">Create new recipe</button>
+                </div>
+            </div>
             <div class="recipe-row">
                 <h4>My Recipes</h4>
                 <div class="row">
