--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -26,7 +26,7 @@
         <div class="main-content">
             <div class="row home-top">
                 <div class="col">
-                    <h1>Welcome, user!</h1>
+                    <h1>Welcome!</h1>
                 </div>
                 <div class="col create-new-recipe-top">
                     <button type="button" class="btn btn-primary">Create new recipe</button>
@@ -35,12 +35,10 @@
             <div class="recipe-row">
                 <h4>My Recipes</h4>
                 <div class="row">
-                    <div class="col recipe-display">
-                        some cards to display here
-                    </div>
+                    <div class="col recipe-display"></div>
                 </div>
             </div>
-            <div class="recipe-row">
+            <!-- <div class="recipe-row">
                 <h4>Recents</h4>
                 <div class="row">
                     <div class="col recipe-display">
@@ -79,11 +77,14 @@
                         some cards to display here
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Injected for nav -->
     <script src="//code.jquery.com/jquery.min.js"></script> 
     <script id="replace_with_navbar" src="../scripts/nav.js"></script>
+    <!-- Recipe card -->
+    <script src="../scripts/home.js"></script>
+    <script src="../scripts/recipeCards.js"></script>
 </body>
 </html>
