made side scroll functional

--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -34,7 +34,7 @@
             </div>
             <div class="recipe-row">
                 <h2>My Recipes</h2>
-                <div class="row">
+                <div class="row recipe-list">
                     <div class="col recipe-display"></div>
                 </div>
             </div>
