--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -26,7 +26,7 @@
         <div class="main-content">
             <div class="row home-top">
                 <div class="col">
-                    <h1>Welcome!</h1>
+                    <h1>Let's get cooking!</h1>
                 </div>
                 <div class="col create-new-recipe-top">
                     <button type="button" class="btn btn-primary">Create new recipe</button>
