--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -24,12 +24,13 @@
     <div class="container">
         <div id="nav-placeholder"></div>
         <div class="main-content">
+            <!-- Main home content here -->
             <div class="row home-top">
                 <div class="col">
                     <h1>Let's get cooking!</h1>
                 </div>
                 <div class="col create-new-recipe-top">
-                    <button type="button" class="btn btn-primary">Create new recipe</button>
+                    <a role="button" class="btn btn-primary" href="addRecipe.html">Create new recipe</a>
                 </div>
             </div>
             <div class="recipe-row">
