--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -79,6 +79,7 @@
                     </div>
                 </div>
             </div> -->
+            <a role="button" href="recipeDisplay.html">temp recipe display</a>
         </div>
     </div>
     <!-- Injected for nav -->
