Changing cheap filter section for SearchPage

--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -59,17 +59,17 @@
 
             <!-- Cook Time -->
             <p>Total Cook Time</p>
-            <div class = "filter-section">
+            <div class = "filter-slider">
                 <input id = "cookTime" type="range"></input>
             </div>
             
             <!-- Is the meal cheap -->
-            <div class = "filter-section">
-                <div class = "filterCheckbox">
-                    <input id = "cheap" type="checkBox"></input>
-                    <p>Cheap</p>
-                </div>
-                <button  type="button" id="submitFilter" onclick="toggleFilter()">Submit</button>
+            <div class = "checkBox-section">
+                <input id = "cheap" type="checkBox"></input>
+                <label for="cheap">  Cheap</label>
+            </div>
+            <div class = "submitFilter-section">
+                <button  type="button" onclick="toggleFilter()">Submit</button>
             </div>
         </div> 
 
