--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
-
+    
     <!-- Our Personal CSS Files -->
     <link rel='stylesheet' href='../styles/home.css'>
     <!-- Injected for nav -->
@@ -34,19 +34,18 @@
                 </div>
             </div>
             <div class="recipe-row">
+                <h2>Favorites</h2>
+                <div class="row recipe-list">
+                    <div id="favorites-cards" class="col recipe-display"></div>
+                </div>
+            </div>
+            <div class="recipe-row">
                 <h2>My Recipes</h2>
                 <div class="row recipe-list">
-                    <div class="col recipe-display"></div>
+                    <div id="my-recipes-cards" class="col recipe-display"></div>
                 </div>
             </div>
-            <!-- <div class="recipe-row">
-                <h4>Recents</h4>
-                <div class="row">
-                    <div class="col recipe-display">
-                        some cards to display here
-                    </div>
-                </div>
-            </div>
+            <!--
             <div class="recipe-row">
                 <h4>My Cookbooks</h4>
                 <div class="row">
@@ -82,7 +81,7 @@
         </div>
     </div>
     <!-- Injected for nav -->
-    <script src="//code.jquery.com/jquery.min.js"></script> 
+    <script src="//code.jquery.com/jquery.min.js"></script>
     <script id="replace_with_navbar" src="../scripts/nav.js"></script>
     <!-- Recipe card -->
     <script src="../scripts/home.js"></script>
