removed href from editRecipe

--- a/source/Spatch/public/editRecipe.html
+++ b/source/Spatch/public/editRecipe.html
@@ -73,7 +73,7 @@
         </div>
         <div class="row" id="delete-or-edit-buttons">
             <div class="col" id="delete-button-div">
-                <a role="button" id="delete-button" class="btn btn-danger" href="home.html">Delete Recipe</a>
+                <a role="button" id="delete-button" class="btn btn-danger">Delete Recipe</a>
             </div>
             <div class="col" id="save-recipe-button-div">
                 <button type="button" id="save-recipe-button" class="btn btn-primary">Save Changes</button>
