Added filter icon to filter-toggle button

--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -28,8 +28,8 @@
         <!-- SearchBar and Button that displays filter options -->
 
         <div class="SearchBar">
-            <input  id="searchInput" placeholder="Search"/>
-            <button id="filterToggle"  onclick="toggleFilter()"></button>
+            <input  id="searchInput" placeholder="Search for a Recipe" />
+            <button id="filterToggle"  onclick="toggleFilter()"><img id="filterImage" src="frontEnd1-assets/search-page-icons/filter.png"></img></button>
         </div>
 
 
