--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -34,15 +34,15 @@
                 </div>
             </div>
             <div class="recipe-row">
-                <h2>Favorites</h2>
+                <h2>All Recipes</h2>
                 <div class="row recipe-list">
-                    <div id="favorites-cards" class="col recipe-display"></div>
+                    <div id="all-recipes-cards" class="col recipe-display"></div>
                 </div>
             </div>
             <div class="recipe-row">
-                <h2>My Recipes</h2>
+                <h2>Favorites</h2>
                 <div class="row recipe-list">
-                    <div id="my-recipes-cards" class="col recipe-display"></div>
+                    <div id="favorites-cards" class="col recipe-display"></div>
                 </div>
             </div>
             <!--
