made some style and js fixes but will still need to come back and fix those

--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -39,12 +39,12 @@
                     <div id="all-recipes-cards" class="col recipe-display"></div>
                 </div>
             </div>
-            <div class="recipe-row">
+            <!-- <div class="recipe-row">
                 <h2>Favorites</h2>
                 <div class="row recipe-list">
                     <div id="favorites-cards" class="col recipe-display"></div>
                 </div>
-            </div>
+            </div> -->
             <!--
             <div class="recipe-row">
                 <h4>My Cookbooks</h4>
@@ -78,7 +78,6 @@
                     </div>
                 </div>
             </div> -->
-            <a role="button" href="recipeDisplay.html">temp recipe display</a>
         </div>
     </div>
     <!-- Injected for nav -->
