--- a/source/Spatch/public/recipeDisplay.html
+++ b/source/Spatch/public/recipeDisplay.html
@@ -25,7 +25,7 @@
         <div id="nav-placeholder"></div>
         
         <div class="main-content" >
-            <input type="image" src="./Assets-images/arrowLeft.svg" name="goBack" class="goBack" id="goBack" />
+            <a href="home.html"><img src="./Assets-images/arrowLeft.svg" name="goBack" class="goBack" id="goBack"></a>
             <div class="row justify-content-start">
                 <div class="col-8" >
                     <div class="row" id="recipe-title-items">
