--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -15,9 +15,9 @@
     <!-- https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
 
     <!-- Our Personal CSS Files -->
-    <link rel='stylesheet' href='../styles/home.css'>
+    <link rel='stylesheet' href='../../styles/home.css'>
     <!-- Injected for nav -->
-    <link rel='stylesheet' href='../styles/nav.css'>
+    <link rel='stylesheet' href='../../styles/nav.css'>
 </head>
 
 <body>
