--- a/source/Spatch/public/addRecipe.html
+++ b/source/Spatch/public/addRecipe.html
@@ -49,6 +49,21 @@
             <span class="subTitle">Total Time</span>
             <input type="text" class="create-recipe-input-fields" id="totalTimeEntry" name="totalTimeEntry" placeholder="i.e. XX hrs XX minutes">
         </span>
+        <!--Testing the ingredient individual information div-->
+        <div class="ingredient-ind">
+            <input type="text" class="ingredient-ind-name" name="ingredient-ind-name" placeholder="Ingredient">
+            <input type="text" class="ingredient-ind-amount" name="ingredient-ind-amount" placeholder="Amount">
+            <select class="ingredient-ind-unit" name="ingredient-ind-unit">
+                <option value="lbs">lbs</option>
+                <option value="kg">kg</option>
+                <option value="pieces">pieces</option>
+                <option value="ml">ml</option>
+            </select>
+            <button class="btn btn-danger btn-sm">Discard</button>
+
+        </div>
+
+
         <span id="servingSize">
             <span class="subTitle">Serving Size</span>
             <select id="servingSizeChoice" name="servingSizeChoice">
