--- a/source/Spatch/public/addRecipe.html
+++ b/source/Spatch/public/addRecipe.html
@@ -55,7 +55,7 @@
             <input type="text" class="ingredient-ind-amount" name="ingredient-ind-amount" placeholder="Amount">
             <select class="ingredient-ind-unit" name="ingredient-ind-unit">
                 <option value="lbs">lbs</option>
-                <option value="kg">kg</option>
+                <option value="kgs">kgs</option>
                 <option value="pieces">pieces</option>
                 <option value="ml">ml</option>
             </select>
