Finished ingredient class

--- a/source/Spatch/public/addRecipe.html
+++ b/source/Spatch/public/addRecipe.html
@@ -22,6 +22,7 @@
 
 <body>
     <script src="../scripts/addRecipe.js"></script>
+    <script src="../scripts/IngredientInd.js"></script>
     <div id="nav-placeholder"></div>
     <div class="main-content" id="formDiv">
         <h1 id="create-recipe-title">Create Recipe</h1>
@@ -49,6 +50,7 @@
             <span class="subTitle">Total Time</span>
             <input type="text" class="create-recipe-input-fields" id="totalTimeEntry" name="totalTimeEntry" placeholder="i.e. XX hrs XX minutes">
         </span>
+        <div id="ingredient-cards"></div>
         <!--Testing the ingredient individual information div-->
         <div class="ingredient-ind">
             <input type="text" class="ingredient-ind-name" name="ingredient-ind-name" placeholder="Ingredient">
