Added add ingredient card button

--- a/source/Spatch/public/addRecipe.html
+++ b/source/Spatch/public/addRecipe.html
@@ -51,6 +51,7 @@
             <input type="text" class="create-recipe-input-fields" id="totalTimeEntry" name="totalTimeEntry" placeholder="i.e. XX hrs XX minutes">
         </span>
         <div id="ingredient-cards"></div>
+        <button class="btn btn-primary" id="add-ingredient-cards">Add ingredient</button>
 
 
         <span id="servingSize">
