Fixed syntax issue

--- a/source/Spatch/public/addRecipe.html
+++ b/source/Spatch/public/addRecipe.html
@@ -82,7 +82,7 @@
                         <option value="pieces">pieces</option>
                         <option value="ml">ml</option>
                     </select>
-                    <button class="btn btn-danger btn-sm">Discard</button>
+                    <button class="btn btn-outline-danger btn-sm">Discard</button>
 
                 </div>
                 -->
