added favorites section

--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
 
-    <title>Title</title>
+    <title>Home | Spatch</title>
 
     <!-- Favicon -->
     <link rel='icon' type='image/png' href='/favicon.png'>
@@ -34,17 +34,17 @@
                 </div>
             </div>
             <div class="recipe-row">
-                <h2>All Recipes</h2>
-                <div class="row recipe-list">
-                    <div id="all-recipes-cards" class="col recipe-display"></div>
-                </div>
-            </div>
-            <!-- <div class="recipe-row">
                 <h2>Favorites</h2>
                 <div class="row recipe-list">
                     <div id="favorites-cards" class="col recipe-display"></div>
                 </div>
-            </div> -->
+            </div>
+            <div class="recipe-row">
+                <h2>My Recipes</h2>
+                <div class="row recipe-list">
+                    <div id="all-recipes-cards" class="col recipe-display"></div>
+                </div>
+            </div>
             <!--
             <div class="recipe-row">
                 <h4>My Cookbooks</h4>
