fin search, image, add recipe

--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -69,7 +69,7 @@
                 <label for="cheap">  Cheap</label>
             </div>
             <div class = "submitFilter-section">
-                <button  type="button" onclick="toggleFilter()">Submit</button>
+                <button  type="button" onclick="toggleFilter();getSearchResults()">Submit</button>
             </div>
         </div> 
 
