--- a/source/Spatch/public/TTS.html
+++ b/source/Spatch/public/TTS.html
@@ -29,5 +29,5 @@
         Restart <i  onclick="restartText(this)" class="fa fa-refresh"></i>
       </div>
   </body>
-  <script src="../scripts/textToSpeech.js"></script>
+  <script src="../scripts/TTS.js"></script>
 </html>
