added css to component

--- a/source/Spatch/public/TTS.html
+++ b/source/Spatch/public/TTS.html
@@ -28,6 +28,8 @@
       <div id="restart_btn" class="btn_rst_design">
         Restart <i  onclick="restartText(this)" class="fa fa-refresh"></i>
       </div>
+
+    <div id="textTTS"></div>
   </body>
   <script src="../scripts/TTS.js"></script>
 </html>
