--- a/source/Spatch/public/TTS.html
+++ b/source/Spatch/public/TTS.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+      <!-- need to include this link on recipeDisplay -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="../styles/TTS.css">
@@ -31,5 +32,6 @@
 
     <div id="textTTS"></div>
   </body>
+  <script src="../scripts/TTSComponent.js"></script>
   <script src="../scripts/TTS.js"></script>
 </html>
