tts functional need to style

--- a/source/Spatch/public/recipeDisplay.html
+++ b/source/Spatch/public/recipeDisplay.html
@@ -92,6 +92,7 @@
     <!-- JS files -->
     <script src="../scripts/recipeDisplay.js"></script>
     <script src ="../scripts/recipeDisplayComponent.js"></script>
+    <script src="../scripts/TTSComponent.js"></script>
     
     <!-- Injected for nav -->
     <!-- <script src="//code.jquery.com/jquery.min.js"></script>  -->
