--- a/source/Spatch/public/index.html
+++ b/source/Spatch/public/index.html
@@ -8,7 +8,7 @@
     <body>
         <section class ="nav1">
             <header>
-                <img src = "logo.png" class = "logo">
+                <img src = "Assets-images/logo.png" class = "logo">
                 <ul>
                     <li><a href="#" class = "navItems">Home</a></li>
                     <li><a href="#" class = "navItems">Recipes</a></li>
@@ -26,13 +26,13 @@
                     <a href="#" class="recipeBtn">Find Recipes</a>
                 </div>
                 <div class = "recipeBookDiv">
-                    <img src ="GusteauImg.png" class="chefImg">
+                    <img src ="Assets-images/GusteauImg.png" class="chefImg">
                 </div>
             </div>
         </section>
 
         <section class = "nav1 nav2">
-            <img src = "section2Ingredients.png" class="ingImg">
+            <img src = "Assets-images/section2Ingredients.png" class="ingImg">
             <div class = "features">
                 <div class = "description section2Description">
                     <h3 style="color:black">CREATE YOUR<br><span>OWN RECIPES</span>
@@ -58,7 +58,7 @@
                     <a href="#" class="recipeBtn section3Btn">Explore Recipes</a>
                 </div>
                 <div class = "recipeBookDiv">
-                    <img src ="worldFood.png" class="worldImg">
+                    <img src ="Assets-images/worldFood.png" class="worldImg">
                 </div>
             </div>
         </section>
@@ -69,7 +69,7 @@
                 <div class="fewFeatures">
                     <div class="detailFeature">
                         <div class="overviewImg">
-                            <img src="exploreLogo.png" class="logoImg">
+                            <img src="Assets-images/exploreLogo.png" class="logoImg">
                         </div>
                         <h2>Explore</h2>
                         <p> Tired of cooking and eating the same food everyday? Having trouble thinking about that anniversary dinner surprise? 
@@ -80,7 +80,7 @@
                     </div>
                     <div class="detailFeature">
                         <div class="overviewImg">
-                            <img src="recipeLogo.png" class="logoImg">
+                            <img src="Assets-images/recipeLogo.png" class="logoImg">
                         </div>
                         <h2>Create</h2>
                         <p> With the create a recipe feature, we give you the capability of creating recipes of your own choice
@@ -91,7 +91,7 @@
                     </div>
                     <div class="detailFeature">
                         <div class="overviewImg">
-                            <img src="etcLogo.png" class="logoImg">
+                            <img src="Assets-images/etcLogo.png" class="logoImg">
                         </div>
                         <h2>More</h2>
                         <p>Now now, we know what you must be thinking. These two features are amazing, what else is there. Well, we don't want to give too much away
