updated home with discover section

--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -45,6 +45,12 @@
                     <div id="all-recipes-cards" class="col recipe-display"></div>
                 </div>
             </div>
+            <div class="recipe-row">
+                <h2>Discover Recipes</h2>
+                <div class="row recipe-list">
+                    <div id="discover-recipes-cards" class="col recipe-display"></div>
+                </div>
+            </div>
             <!--
             <div class="recipe-row">
                 <h4>My Cookbooks</h4>
