integrated timer and changed css

--- a/source/Spatch/public/recipeDisplay.html
+++ b/source/Spatch/public/recipeDisplay.html
@@ -15,8 +15,10 @@
     <!-- https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
 
     <!-- Our Personal CSS Files -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='../styles/recipeDisplay.css'>
+    <link rel="stylesheet" href="../styles/timer.css">
     <!-- Injected for nav -->
     <link rel='stylesheet' href='../styles/nav.css'>
 </head>
@@ -93,6 +95,7 @@
     <script src="../scripts/recipeDisplay.js"></script>
     <script src ="../scripts/recipeDisplayComponent.js"></script>
     <script src="../scripts/TTSComponent.js"></script>
+    <script src="../scripts/timerComponent.js"></script>
     
     <!-- Injected for nav -->
     <!-- <script src="//code.jquery.com/jquery.min.js"></script>  -->
