updates to searchPage code

--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -78,21 +78,18 @@
 
             <!-- button to apply all filters -->
             <div class = "submit-filter-section">
-                <button id="applyFilters" onclick="submitFilter()" >Apply Filters</button>
+                <button class="btn btn-primary" id="applyFilters" >Apply Filters</button>
             </div>
         </div> 
+
+        <!-- Recipe Results -->
+        <div class="recipe-results">
+
+        </div>
 
         
     </div>
     
-    <!-- Recipe Results -->
-    <div>
-        <button type="button" class="btn btn-default" aria-label="Left Align">
-            <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-          </button>
-
-    </div>
-
     <!-- Injected for nav -->
     <script src="//code.jquery.com/jquery.min.js"></script> 
     <script id="replace_with_navbar" src="../scripts/nav.js"></script>
